--- a/CustomRPC/Strings.pl.resx
+++ b/CustomRPC/Strings.pl.resx
@@ -185,9 +185,13 @@ Aby go zresetować kliknij Tak, lub Nie żeby wyjść.</value>
     <value>Nie można dodać lub usunąć skrótu startowego:</value>
   </data>
   <data name="errorOpeningURL" xml:space="preserve">
-    <value>Nie udało się otworzyć linku. Skopiowano do schowka.</value>
+    <value>Nie można otworzyć adresu URL. Został skopiowany do schowka.</value>
   </data>
   <data name="statusUpdatingPresence" xml:space="preserve">
     <value>Aktualizowanie statusu...</value>
+  </data>
+  <data name="newPresetConfirmation" xml:space="preserve">
+    <value>Czy na pewno chcesz zacząć od zera?
+Nie można tego cofnąć.</value>
   </data>
 </root>
