Updated nl (new translator)

--- a/CustomRPC/MainForm.nl.resx
+++ b/CustomRPC/MainForm.nl.resx
@@ -462,4 +462,7 @@ Om van kracht te worden, moeten beide velden groter zijn dan 0.</value>
   <data name="faqToolStripMenuItem.Text" xml:space="preserve">
     <value>Veel Gestelde Vragen</value>
   </data>
+  <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
+    <value>Nieuwe Voorinstelling</value>
+  </data>
 </root>
