Updated es (new translator)

--- a/CustomRPC/About.es.resx
+++ b/CustomRPC/About.es.resx
@@ -124,6 +124,6 @@
     <value>Cerrar</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Acerca De</value>
+    <value>Acerca de</value>
   </data>
 </root>
