--- a/CustomRPC/Strings.es.resx
+++ b/CustomRPC/Strings.es.resx
@@ -121,18 +121,18 @@
     <value>Error</value>
   </data>
   <data name="errorNoID" xml:space="preserve">
-    <value>No se encontró ninguna identificación!</value>
+    <value>¡ID no especificada!</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Ha ocurrido un error durante se descargaba o instalaba una actualización.
-Presiona "Sí" para volver a intentarlo o "No" para descargarlo manualmente.</value>
+    <value>Hubo un error al descargar o instalar una actualización. 
+Presiona "Sí" para reintentar o "No" para descargar manualmente.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Necesitas ayuda?</value>
+    <value>¿Necesitas ayuda?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
-    <value>¿Te gustaría abrir un manual?
-Lo puedes abrir en cualquier momento en Ayuda -&gt; Abrir el Manual o presionando F1.</value>
+    <value>¿Te gustaría abrir el manual? 
+Puedes abrirlo en cualquier momento yendo a Ayuda -&gt; Abrir el Manual o presionando F1.</value>
   </data>
   <data name="information" xml:space="preserve">
     <value>Información</value>
@@ -150,44 +150,48 @@ Lo puedes abrir en cualquier momento en Ayuda -&gt; Abrir el Manual o presionand
     <value>Desconectado</value>
   </data>
   <data name="statusError" xml:space="preserve">
-    <value>Error de conexión (¿ID equivocada?)</value>
+    <value>Error de conexión (¿ID incorrecto?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>¡La URL especificada es invalida para el botón(es) o el texto es muy largo!</value>
+    <value>¡URL inválida especificada para el/los botón(es) o el texto es demasiado largo!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
-    <value>¡No se puede conectar al internet!</value>
+    <value>¡No se puede conectar a Internet!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
     <value>¡No se han encontrado actualizaciones!</value>
   </data>
   <data name="errorCorruptSettings" xml:space="preserve">
-    <value>El archivo de configuración está dañado.
-Pulse Sí para restablecer la configuración, pulse No para salir.</value>
+    <value>El archivo de configuración está dañado. 
+Presiona "Sí" para restablecer la configuración, presiona "No" para salir.</value>
   </data>
   <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>Fallo al importar el preajuste; el archivo no se encuentra, está dañado, o formateado de forma errónea.</value>
+    <value>Error al importar el preajuste; el archivo no existe, esta dañado o no está correctamente formateado.</value>
   </data>
   <data name="askAnalyticsConsent" xml:space="preserve">
-    <value>Autoriza a CustomRP a enviar analíticas de uso al desarrollador?
-(Toda la información es despersonalizada.)</value>
+    <value>¿Permites que CustomRP envíe tus análiticas de uso al desarrollador? 
+(Todos los datos están despersonalizados).</value>
   </data>
   <data name="errorSavingSettings" xml:space="preserve">
-    <value>Ha ocurrido un error al guardar las cambias:</value>
+    <value>Se produjo un error al guardar la configuración:</value>
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
-    <value>Por favor, añade "{0}" a las excepciones de tu antivirus. Si este error persiste, reinstalar CustomRP.</value>
+    <value>Por favor, añade la ruta "{0}" a las excepciones de tu antivirus. Reinstala CustomRP si este error persiste.</value>
   </data>
   <data name="errorInvalidImageURL" xml:space="preserve">
-    <value>El URL de la imagen es demaciado largo!</value>
+    <value>¡La URL de la imagen es demasiado larga!</value>
   </data>
   <data name="errorStartupShortcut" xml:space="preserve">
-    <value>Error al agregar o eliminar un acceso directo de inicio:</value>
+    <value>Error al añadir o eliminar un acceso directo al inicio:</value>
   </data>
   <data name="errorOpeningURL" xml:space="preserve">
-    <value>Fallo al abrir la URL. Ha sido copiado al portapapeles.</value>
+    <value>Error al abrir la URL. Se ha copiado al portapapeles.</value>
   </data>
   <data name="statusUpdatingPresence" xml:space="preserve">
     <value>Actualizando presencia...</value>
+  </data>
+  <data name="newPresetConfirmation" xml:space="preserve">
+    <value>¿Estás seguro de que quieres empezar desde cero? 
+Esto es irreversible.</value>
   </data>
 </root>
