--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -200,4 +200,8 @@
     <value>Вы уверены, что хотите начать с нуля?
 Это действие невозможно отменить.</value>
   </data>
+  <data name="deleteSettings" xml:space="preserve">
+    <value>Вы хотите удалить настройки приложения?
+Это действие невозможно отменить.</value>
+  </data>
 </root>
