--- a/CustomRPC/MainForm.ru.resx
+++ b/CustomRPC/MainForm.ru.resx
@@ -501,4 +501,7 @@
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
     <value>Новый пресет</value>
   </data>
+  <data name="labelType.ToolTip" xml:space="preserve">
+    <value>Тип активности, показываемый в статусе.</value>
+  </data>
 </root>
